objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Appeals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Care Requests</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaints and Grievances</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__CareGap</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Healthcare</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DueDate__c</fullName>
        <description>Date by when this care gap should be closed.</description>
        <inlineHelpText>Date by when this care gap should be closed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FinancialValue__c</fullName>
        <description>Potential savings by closing this care gap.</description>
        <inlineHelpText>Potential savings by closing this care gap.</inlineHelpText>
        <label>Financial Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <description>Rank by which this care gap is sorted.</description>
        <inlineHelpText>Rank by which this care gap is sorted.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureID__c</fullName>
        <description>ID of the source agency&apos;s measure for this care gap.</description>
        <inlineHelpText>ID of the source agency&apos;s measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureVersion__c</fullName>
        <description>Version of the source agency&apos;s ID measure for this care gap.</description>
        <inlineHelpText>Version of the source agency&apos;s ID measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgency__c</fullName>
        <description>Agency that identified the care gap.</description>
        <inlineHelpText>Agency that identified the care gap.</inlineHelpText>
        <label>Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemID__c</fullName>
        <description>Record ID in the source system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Record ID in the source system.</inlineHelpText>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated.</description>
        <inlineHelpText>When last updated.</inlineHelpText>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Name of the system where this care gap was identified.</description>
        <inlineHelpText>Name of the system where this care gap was identified.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Handedover__c</fullName>
        <label>Quantity Handedover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned__c</fullName>
        <label>Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Requested Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Care_Plans</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.HealthCloudGA__CarePlan</value>
        </filters>
        <label>My Care Plans</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sample_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Review,In-Review</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Sample Device Request</value>
        </filters>
        <filters>
            <field>CASES.LAST_UPDATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Sample Requests</label>
    </listViews>
    <recordTypes>
        <fullName>Admission</fullName>
        <active>true</active>
        <businessProcess>Care Requests</businessProcess>
        <description>Record type for notification and approval of an inpatient admission.</description>
        <label>Admission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Appeal</fullName>
        <active>true</active>
        <businessProcess>Appeals</businessProcess>
        <description>Record type for review and disposition of an appeal related to a prior authorization or admission decision.</description>
        <label>Appeal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <businessProcess>Complaints and Grievances</businessProcess>
        <description>Record type for review and resolution of a complaint.</description>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConcurrentReview</fullName>
        <active>true</active>
        <businessProcess>Care Requests</businessProcess>
        <description>Record type for review and approval of a continued stay related to an inpatient admission.</description>
        <label>Concurrent Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>DrugRequest</fullName>
        <active>true</active>
        <businessProcess>Care Requests</businessProcess>
        <description>Record type for prior authorization request and approval of a prescription drug.</description>
        <label>Drug Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grievance</fullName>
        <active>true</active>
        <businessProcess>Complaints and Grievances</businessProcess>
        <description>Record type for review and resolution of a grievance.</description>
        <label>Grievance</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CareGap</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__CareGap</businessProcess>
        <description>Defines a care gap for an individual</description>
        <label>CareGap</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CarePlan</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>Defines a care plan for an individual and their care team</description>
        <label>CarePlan</label>
    </recordTypes>
    <recordTypes>
        <fullName>MedicalDeviceRequest</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>It is created to capture all the cases related to medical device requests</description>
        <label>MedicalDeviceRequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>MedicalDeviceReturn</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>It is created to capture all the cases related to medical device returns</description>
        <label>MedicalDeviceReturn</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceCase</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <label>Service Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceRequest</fullName>
        <active>true</active>
        <businessProcess>Care Requests</businessProcess>
        <description>Record type for prior authorization request and approval of a procedure or service.</description>
        <label>Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SocialDeterminant</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <label>SocialDeterminant</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>